test/files/neg/t2416.check
t2416.scala:3: error: type arguments [Int] do not conform to trait A's type parameter bounds [X <: Double]
  def x : A[Int]#B = 10
          ^
t2416.scala:8: error: type arguments [Boolean] do not conform to type B's type parameter bounds [X <: Double]
  def x : A#B[Boolean] = 10
            ^
t2416.scala:13: error: type arguments [Boolean] do not conform to type B's type parameter bounds [X <: Double]
  type C[Z <: A] = Z#B[Boolean]
                     ^
three errors found
